--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
 
       <img src="./assets/images/avatar-jessica.jpeg" alt="Victor Crest" class="profile-image">
       <div>
-        <h1>Randall
-          London</h1>
+        <h1>RandallLondon</h1>
 
         <h2>United Kingdom</h2>
       </div>
